@@ -1,5 +1,9 @@
 2009-02-05  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* libtiff/tif_dirread.c: Re-incorporated a sanity check on tag size,
+	but at the 2GB boundary to avoid overflow on 32bit systems. 
+	http://bugzilla.maptools.org/show_bug.cgi?id=1993
+
 	* libtiff/tif_dirread.c: Remove some assertions that blow due to
 	corrupt files rather than in response to library internal 
 	inconsistencies.  
